# auto-bml

./: .env.example  LICENSE  README.md  action.yml  backlog.md  pull.csv  pyproject.toml  requirements.txt
assets/: pull-theory.md
auto_bml/: cli.py  config.py  copywriter.py  deployer.py  github_ops.py  models.py  phase.py  pull_io.py  run_store.py  scoring.py
auto_bml/ads/: campaign.py  client.py  metrics.py  onboarding.py
auto_bml/orchestrator/: launch.py  measure.py
auto_bml/scaffold/: program.md
auto_bml/workflow_templates/: bml-launch.yml  bml-measure.yml
onboarding/scaffold/: program.md  pull.csv
workflow-templates/: bml-launch.yml  bml-measure.yml
